--- a/phalanx_radar_fsk.ioc
+++ b/phalanx_radar_fsk.ioc
@@ -165,7 +165,7 @@ Mcu.Pin8=VP_GPDMA1_VS_GPDMACH8
 Mcu.Pin9=VP_GPDMA1_VS_GPDMACH10
 Mcu.PinsNb=27
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=SAMPLE_FRREQ,100000
+Mcu.UserConstants=SAMPLE_FREQ,100000
 Mcu.UserName=STM32U575ZITxQ
 MxCube.Version=6.9.1
 MxDb.Version=DB.6.0.91
@@ -242,42 +242,72 @@ ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_MEMORYMAP_Init-MEMORYMAP-false-HAL-true,6-MX_ADC1_Init-ADC1-false-HAL-true,7-MX_ADC4_Init-ADC4-false-HAL-true,8-MX_DAC1_Init-DAC1-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM2_Init-TIM2-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
+RCC.ADF1Freq_Value=160000000
+RCC.AHBFreq_Value=160000000
+RCC.APB1Freq_Value=160000000
+RCC.APB1TimFreq_Value=160000000
+RCC.APB2Freq_Value=160000000
+RCC.APB2TimFreq_Value=160000000
+RCC.APB3Freq_Value=160000000
 RCC.CK48Freq_Value=48000000
 RCC.CRSFreq_Value=48000000
+RCC.CortexFreq_Value=160000000
 RCC.DACCLockSelectionVirtual=RCC_DAC1CLKSOURCE_LSI
 RCC.DACFreq_Value=32000
 RCC.EPOD_VALUE=4000000
-RCC.FDCANFreq_Value=258000000
+RCC.FCLKCortexFreq_Value=160000000
+RCC.FDCANFreq_Value=160000000
 RCC.FLatency=FLASH_LATENCY_4
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=160000000
 RCC.HSE_VALUE=16000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=ADCFreq_Value,CK48Freq_Value,CRSFreq_Value,DACCLockSelectionVirtual,DACFreq_Value,EPOD_VALUE,FDCANFreq_Value,FLatency,FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MSI_VALUE,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWR_Regulator_Voltage_Scale,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.I2C1Freq_Value=160000000
+RCC.I2C2Freq_Value=160000000
+RCC.I2C3Freq_Value=160000000
+RCC.I2C4Freq_Value=160000000
+RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FLatency,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PWR_Regulator_Voltage_Scale,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.LPTIM2Freq_Value=160000000
+RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSIDIV_VALUE=32000
 RCC.LSI_VALUE=32000
+RCC.MCO1PinFreq_Value=160000000
+RCC.MDF1Freq_Value=160000000
 RCC.MSI_VALUE=4000000
+RCC.OCTOSPIMFreq_Value=160000000
 RCC.PLL2PoutputFreq_Value=258000000
 RCC.PLL2QoutputFreq_Value=258000000
 RCC.PLL2RoutputFreq_Value=258000000
 RCC.PLL3PoutputFreq_Value=258000000
 RCC.PLL3QoutputFreq_Value=258000000
 RCC.PLL3RoutputFreq_Value=258000000
-RCC.PLLPoutputFreq_Value=258000000
-RCC.PLLQoutputFreq_Value=258000000
-RCC.PLLRCLKFreq_Value=258000000
+RCC.PLLN=80
+RCC.PLLPoutputFreq_Value=160000000
+RCC.PLLQoutputFreq_Value=160000000
+RCC.PLLRCLKFreq_Value=160000000
 RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE1
 RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=258000000
 RCC.SAI2Freq_Value=258000000
-RCC.SDMMCFreq_Value=258000000
+RCC.SDMMCFreq_Value=160000000
+RCC.SPI1Freq_Value=160000000
+RCC.SPI2Freq_Value=160000000
+RCC.SPI3Freq_Value=160000000
+RCC.SYSCLKFreq_VALUE=160000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.UART4Freq_Value=160000000
+RCC.UART5Freq_Value=160000000
+RCC.USART1Freq_Value=160000000
+RCC.USART2Freq_Value=160000000
+RCC.USART3Freq_Value=160000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=4000000
 RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=516000000
+RCC.VCOOutputFreq_Value=320000000
 RCC.VCOPLL2OutputFreq_Value=516000000
 RCC.VCOPLL3OutputFreq_Value=516000000
 SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1_ExtAndInt
@@ -286,14 +316,14 @@ THREADX.AZRTOS_APP_MEM_ALLOCATION_METHOD=1
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_APP_THREAD_ENTRY,TX_APP_THREAD_NAME,TX_APP_THREAD_PRIO,TX_APP_MEM_POOL_SIZE,TX_APP_STACK_SIZE,AZRTOS_APP_MEM_ALLOCATION_METHOD
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=true
-THREADX.TX_APP_MEM_POOL_SIZE=(3 * 1024)
+THREADX.TX_APP_MEM_POOL_SIZE=(3*1024)
 THREADX.TX_APP_STACK_SIZE=512
-THREADX.TX_APP_THREAD_ENTRY=MainThread_thread_entry
+THREADX.TX_APP_THREAD_ENTRY=MainThread_entry
 THREADX.TX_APP_THREAD_NAME=Main Thread
 THREADX.TX_APP_THREAD_PRIO=5
 TIM1.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 No Output,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2,PeriodNoDither
-TIM1.PeriodNoDither=1600
+TIM1.PeriodNoDither=160000000/SAMPLE_FREQ
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
 TIM2.IPParameters=PeriodNoDither,TIM_MasterOutputTrigger
