--- a/phalanx_radar_fsk.ioc
+++ b/phalanx_radar_fsk.ioc
@@ -12,7 +12,7 @@ ADC4.ExternalTrigConv=ADC4_EXTERNALTRIG_T1_TRGO2
 ADC4.IPParameters=NbrOfConversionFlag,NbrOfConversion,DMAContinuousRequests,ExternalTrigConv,SelectedChannel,CommonPathInternal
 ADC4.NbrOfConversion=1
 ADC4.NbrOfConversionFlag=0
-ADC4.SelectedChannel=ADC_CHANNEL_1|ADC_CHANNEL_2|ADC_CHANNEL_3|ADC_CHANNEL_4
+ADC4.SelectedChannel=ADC_CHANNEL_1|ADC_CHANNEL_2|ADC_CHANNEL_3|ADC_CHANNEL_4|ADC_CHANNEL_DAC1CH1_ADC4
 CAD.formats=[]
 CAD.pinconfig=Dual
 CAD.provider=
@@ -138,32 +138,33 @@ Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=VP_ICACHE_VS_ICACHE
-Mcu.Pin11=VP_ICACHE_VS_ENABLE_ICACHE_MEMORY
-Mcu.Pin12=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin13=VP_PWR_VS_DBSignals
-Mcu.Pin14=VP_PWR_VS_SECSignals
-Mcu.Pin15=VP_PWR_VS_LPOM
-Mcu.Pin16=VP_PWR_Vdda
-Mcu.Pin17=VP_RTC_VS_RTC_Activate
-Mcu.Pin18=VP_RTC_VS_RTC_Calendar
-Mcu.Pin19=VP_SYS_VS_tim6
+Mcu.Pin10=VP_GPDMA1_VS_GPDMACH10
+Mcu.Pin11=VP_ICACHE_VS_ICACHE
+Mcu.Pin12=VP_ICACHE_VS_ENABLE_ICACHE_MEMORY
+Mcu.Pin13=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin14=VP_PWR_VS_DBSignals
+Mcu.Pin15=VP_PWR_VS_SECSignals
+Mcu.Pin16=VP_PWR_VS_LPOM
+Mcu.Pin17=VP_PWR_Vdda
+Mcu.Pin18=VP_RTC_VS_RTC_Activate
+Mcu.Pin19=VP_RTC_VS_RTC_Calendar
 Mcu.Pin2=PC2
-Mcu.Pin20=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin21=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin22=VP_TIM1_VS_no_output1
-Mcu.Pin23=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin24=VP_LPBAM_VS_SIG1
-Mcu.Pin25=VP_LPBAM_VS_SIG4
-Mcu.Pin26=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=VP_SYS_VS_tim6
+Mcu.Pin21=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin22=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin23=VP_TIM1_VS_no_output1
+Mcu.Pin24=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin25=VP_LPBAM_VS_SIG1
+Mcu.Pin26=VP_LPBAM_VS_SIG4
+Mcu.Pin27=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin3=PC3
 Mcu.Pin4=PA1
 Mcu.Pin5=PA4
 Mcu.Pin6=PA9
 Mcu.Pin7=PA10
-Mcu.Pin8=VP_GPDMA1_VS_GPDMACH8
-Mcu.Pin9=VP_GPDMA1_VS_GPDMACH10
-Mcu.PinsNb=27
+Mcu.Pin8=VP_ADC4_VS_DAC1_OUT1
+Mcu.Pin9=VP_GPDMA1_VS_GPDMACH8
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=SAMPLE_FREQ,100000
 Mcu.UserName=STM32U575ZITxQ
@@ -313,7 +314,7 @@ RCC.VCOPLL3OutputFreq_Value=516000000
 SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1_ExtAndInt
 SH.COMP_DAC11_group.ConfNb=1
 THREADX.AZRTOS_APP_MEM_ALLOCATION_METHOD=1
-THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_APP_THREAD_ENTRY,TX_APP_THREAD_NAME,TX_APP_THREAD_PRIO,TX_APP_MEM_POOL_SIZE,TX_APP_STACK_SIZE,AZRTOS_APP_MEM_ALLOCATION_METHOD
+THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_APP_THREAD_ENTRY,TX_APP_THREAD_NAME,TX_APP_THREAD_PRIO,TX_APP_MEM_POOL_SIZE,TX_APP_STACK_SIZE,AZRTOS_APP_MEM_ALLOCATION_METHOD,TX_TIMER_TICKS_PER_SECOND
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=true
 THREADX.TX_APP_MEM_POOL_SIZE=(3*1024)
@@ -321,6 +322,7 @@ THREADX.TX_APP_STACK_SIZE=512
 THREADX.TX_APP_THREAD_ENTRY=MainThread_entry
 THREADX.TX_APP_THREAD_NAME=Main Thread
 THREADX.TX_APP_THREAD_PRIO=5
+THREADX.TX_TIMER_TICKS_PER_SECOND=1000
 TIM1.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 No Output,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2,PeriodNoDither
 TIM1.PeriodNoDither=160000000/SAMPLE_FREQ
@@ -331,6 +333,8 @@ TIM2.PeriodNoDither=300
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+VP_ADC4_VS_DAC1_OUT1.Mode=IN-DAC1-OUT1
+VP_ADC4_VS_DAC1_OUT1.Signal=ADC4_VS_DAC1_OUT1
 VP_GPDMA1_VS_GPDMACH10.Mode=LINKEDLIST_GPDMACH10
 VP_GPDMA1_VS_GPDMACH10.Signal=GPDMA1_VS_GPDMACH10
 VP_GPDMA1_VS_GPDMACH8.Mode=LINKEDLIST_GPDMACH8
