--- a/phalanx_radar_fsk.ioc
+++ b/phalanx_radar_fsk.ioc
@@ -314,14 +314,16 @@ RCC.VCOPLL3OutputFreq_Value=516000000
 SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1_ExtAndInt
 SH.COMP_DAC11_group.ConfNb=1
 THREADX.AZRTOS_APP_MEM_ALLOCATION_METHOD=1
-THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_APP_THREAD_ENTRY,TX_APP_THREAD_NAME,TX_APP_THREAD_PRIO,TX_APP_MEM_POOL_SIZE,TX_APP_STACK_SIZE,AZRTOS_APP_MEM_ALLOCATION_METHOD,TX_TIMER_TICKS_PER_SECOND
+THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_APP_THREAD_ENTRY,TX_APP_THREAD_NAME,TX_APP_THREAD_PRIO,TX_APP_MEM_POOL_SIZE,TX_APP_STACK_SIZE,AZRTOS_APP_MEM_ALLOCATION_METHOD,TX_TIMER_TICKS_PER_SECOND,TX_APP_MSG_QUEUE_CREATION,TX_MSG_SIZE_WORDS
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=true
 THREADX.TX_APP_MEM_POOL_SIZE=(3*1024)
+THREADX.TX_APP_MSG_QUEUE_CREATION=0
 THREADX.TX_APP_STACK_SIZE=512
 THREADX.TX_APP_THREAD_ENTRY=MainThread_entry
 THREADX.TX_APP_THREAD_NAME=Main Thread
 THREADX.TX_APP_THREAD_PRIO=5
+THREADX.TX_MSG_SIZE_WORDS=6
 THREADX.TX_TIMER_TICKS_PER_SECOND=1000
 TIM1.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM1.IPParameters=Channel-PWM Generation1 No Output,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2,PeriodNoDither
