--- a/phalanx_radar_fsk.ioc
+++ b/phalanx_radar_fsk.ioc
@@ -138,33 +138,41 @@ Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
-Mcu.Pin10=VP_GPDMA1_VS_GPDMACH10
-Mcu.Pin11=VP_ICACHE_VS_ICACHE
-Mcu.Pin12=VP_ICACHE_VS_ENABLE_ICACHE_MEMORY
-Mcu.Pin13=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin14=VP_PWR_VS_DBSignals
-Mcu.Pin15=VP_PWR_VS_SECSignals
-Mcu.Pin16=VP_PWR_VS_LPOM
-Mcu.Pin17=VP_PWR_Vdda
-Mcu.Pin18=VP_RTC_VS_RTC_Activate
-Mcu.Pin19=VP_RTC_VS_RTC_Calendar
+Mcu.Pin10=PA9
+Mcu.Pin11=PA10
+Mcu.Pin12=PA13 (JTMS/SWDIO)
+Mcu.Pin13=PA14 (JTCK/SWCLK)
+Mcu.Pin14=PB8
+Mcu.Pin15=PB9
+Mcu.Pin16=VP_ADC4_VS_DAC1_OUT1
+Mcu.Pin17=VP_GPDMA1_VS_GPDMACH8
+Mcu.Pin18=VP_GPDMA1_VS_GPDMACH10
+Mcu.Pin19=VP_ICACHE_VS_ICACHE
 Mcu.Pin2=PC2
-Mcu.Pin20=VP_SYS_VS_tim6
-Mcu.Pin21=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin22=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin23=VP_TIM1_VS_no_output1
-Mcu.Pin24=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin25=VP_LPBAM_VS_SIG1
-Mcu.Pin26=VP_LPBAM_VS_SIG4
-Mcu.Pin27=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=VP_ICACHE_VS_ENABLE_ICACHE_MEMORY
+Mcu.Pin21=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin22=VP_PWR_VS_DBSignals
+Mcu.Pin23=VP_PWR_VS_SECSignals
+Mcu.Pin24=VP_PWR_VS_LPOM
+Mcu.Pin25=VP_PWR_Vdda
+Mcu.Pin26=VP_RTC_VS_RTC_Activate
+Mcu.Pin27=VP_RTC_VS_RTC_Calendar
+Mcu.Pin28=VP_SYS_VS_tim6
+Mcu.Pin29=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
 Mcu.Pin3=PC3
+Mcu.Pin30=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin31=VP_TIM1_VS_no_output3
+Mcu.Pin32=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin33=VP_LPBAM_VS_SIG1
+Mcu.Pin34=VP_LPBAM_VS_SIG4
+Mcu.Pin35=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA4
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=VP_ADC4_VS_DAC1_OUT1
-Mcu.Pin9=VP_GPDMA1_VS_GPDMACH8
-Mcu.PinsNb=28
+Mcu.Pin6=PE12
+Mcu.Pin7=PE13
+Mcu.Pin8=PE14
+Mcu.Pin9=PE15
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=SAMPLE_FREQ,100000
 Mcu.UserName=STM32U575ZITxQ
@@ -194,10 +202,18 @@ PA1.Signal=ADC1_IN6
 PA10.Locked=true
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA13\ (JTMS/SWDIO).Locked=true
+PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
+PA14\ (JTCK/SWCLK).Locked=true
+PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA4.Signal=COMP_DAC11_group
 PA9.Locked=true
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB8.Locked=true
+PB8.Signal=I2C1_SCL
+PB9.Locked=true
+PB9.Signal=I2C1_SDA
 PC0.Mode=IN1
 PC0.Signal=ADC4_IN1
 PC1.Mode=IN2
@@ -207,6 +223,14 @@ PC2.Mode=IN3
 PC2.Signal=ADC4_IN3
 PC3.Mode=IN4
 PC3.Signal=ADC4_IN4
+PE12.Locked=true
+PE12.Signal=SPI1_NSS
+PE13.Locked=true
+PE13.Signal=SPI1_SCK
+PE14.Locked=true
+PE14.Signal=SPI1_MISO
+PE15.Locked=true
+PE15.Signal=SPI1_MOSI
 PWR.IPParameters=PowerMode
 PWR.PowerMode=PWR_SMPS_SUPPLY
 PinOutPanel.RotationAngle=0
@@ -317,7 +341,7 @@ THREADX.AZRTOS_APP_MEM_ALLOCATION_METHOD=1
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_APP_THREAD_ENTRY,TX_APP_THREAD_NAME,TX_APP_THREAD_PRIO,TX_APP_MEM_POOL_SIZE,TX_APP_STACK_SIZE,AZRTOS_APP_MEM_ALLOCATION_METHOD,TX_TIMER_TICKS_PER_SECOND,TX_APP_MSG_QUEUE_CREATION,TX_MSG_SIZE_WORDS
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=true
-THREADX.TX_APP_MEM_POOL_SIZE=(3*1024)
+THREADX.TX_APP_MEM_POOL_SIZE=(4*1024)
 THREADX.TX_APP_MSG_QUEUE_CREATION=0
 THREADX.TX_APP_STACK_SIZE=512
 THREADX.TX_APP_THREAD_ENTRY=MainThread_entry
@@ -325,8 +349,8 @@ THREADX.TX_APP_THREAD_NAME=Main Thread
 THREADX.TX_APP_THREAD_PRIO=5
 THREADX.TX_MSG_SIZE_WORDS=6
 THREADX.TX_TIMER_TICKS_PER_SECOND=1000
-TIM1.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-PWM Generation1 No Output,TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2,PeriodNoDither
+TIM1.Channel-PWM\ Generation3\ No\ Output=TIM_CHANNEL_3
+TIM1.IPParameters=TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2,PeriodNoDither,Channel-PWM Generation3 No Output
 TIM1.PeriodNoDither=160000000/SAMPLE_FREQ
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
@@ -371,8 +395,8 @@ VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Mode=Core_Default
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Signal=THREADX_VS_RTOSJjThreadXJjCoreJjDefault
 VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
-VP_TIM1_VS_no_output1.Mode=PWM Generation1 No Output
-VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
+VP_TIM1_VS_no_output3.Mode=PWM Generation3 No Output
+VP_TIM1_VS_no_output3.Signal=TIM1_VS_no_output3
 VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
 VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
 board=NUCLEO-U575ZI-Q
