Changes: - Removed TIM1 PWM generation(no output) from .ioc file. - Added TIM1 start in main (in userspace code part).

--- a/phalanx_radar_fsk.ioc
+++ b/phalanx_radar_fsk.ioc
@@ -161,18 +161,17 @@ Mcu.Pin28=VP_SYS_VS_tim6
 Mcu.Pin29=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
 Mcu.Pin3=PC3
 Mcu.Pin30=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin31=VP_TIM1_VS_no_output3
-Mcu.Pin32=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin33=VP_LPBAM_VS_SIG1
-Mcu.Pin34=VP_LPBAM_VS_SIG4
-Mcu.Pin35=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin31=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin32=VP_LPBAM_VS_SIG1
+Mcu.Pin33=VP_LPBAM_VS_SIG4
+Mcu.Pin34=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin4=PA1
 Mcu.Pin5=PA4
 Mcu.Pin6=PE12
 Mcu.Pin7=PE13
 Mcu.Pin8=PE14
 Mcu.Pin9=PE15
-Mcu.PinsNb=36
+Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=SAMPLE_FREQ,50000
 Mcu.UserName=STM32U575ZITxQ
@@ -349,8 +348,7 @@ THREADX.TX_APP_THREAD_NAME=Main Thread
 THREADX.TX_APP_THREAD_PRIO=5
 THREADX.TX_MSG_SIZE_WORDS=6
 THREADX.TX_TIMER_TICKS_PER_SECOND=1000
-TIM1.Channel-PWM\ Generation3\ No\ Output=TIM_CHANNEL_3
-TIM1.IPParameters=TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2,PeriodNoDither,Channel-PWM Generation3 No Output
+TIM1.IPParameters=TIM_MasterOutputTrigger,TIM_MasterOutputTrigger2,PeriodNoDither
 TIM1.PeriodNoDither=160000000/SAMPLE_FREQ
 TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM1.TIM_MasterOutputTrigger2=TIM_TRGO2_UPDATE
@@ -395,8 +393,6 @@ VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Mode=Core_Default
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Signal=THREADX_VS_RTOSJjThreadXJjCoreJjDefault
 VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR2
 VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
-VP_TIM1_VS_no_output3.Mode=PWM Generation3 No Output
-VP_TIM1_VS_no_output3.Signal=TIM1_VS_no_output3
 VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
 VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
 board=NUCLEO-U575ZI-Q
